WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165382
[CSS Parser] Properly fail on bad values for -webkit-clip-path
https://bugs.webkit.org/show_bug.cgi?id=165382
Summary
[CSS Parser] Properly fail on bad values for -webkit-clip-path
Dave Hyatt
Reported
2016-12-05 09:40:47 PST
[CSS Parser] Properly fail on bad values for -webkit-clip-path
Attachments
Patch
(1.13 KB, patch)
2016-12-05 09:41 PST
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-05 09:41:27 PST
Created
attachment 296152
[details]
Patch
Dave Hyatt
Comment 2
2016-12-05 09:44:10 PST
Fixed in
r209321
.
Jon Lee
Comment 3
2016-12-05 10:01:00 PST
Is there a test that catches this?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug