[CSS Parser] Properly fail on bad values for -webkit-clip-path https://bugs.webkit.org/show_bug.cgi?id=165382

Reviewed by Dean Jackson.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeBasicShapeOrBox):



Canonical link: https://commits.webkit.org/182996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209321 268f45cc-cd09-0410-ab3c-d52691b4dbfc